--- a/src/app/components/patient-timeline/patient-timeline.component.css
+++ b/src/app/components/patient-timeline/patient-timeline.component.css
@@ -61,3 +61,34 @@
   padding-right: 100px;
   position: absolute;
 }
+
+/* Style the buttons that are used to open and close the accordion panel */
+button.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+button.accordion.active, button.accordion:hover {
+  background-color: #ddd;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+div.test {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+}
+
+
+summary {cursor: pointer; padding: 15px 0; width: 100%; background-color: #dcdfe3; border-radius: 2px}
+summary:hover, details[open] summary {background: #3498DB; color: #fff;}
+summary::-webkit-details-marker {display: none;} /*ova e za da nema strelka*/
+details[open] {box-shadow: 0 1px 1px rgba(0, 0, 0, .4)}
