--- a/src/app/components/patient-presentation-item/patient-presentation-item.component.html
+++ b/src/app/components/patient-presentation-item/patient-presentation-item.component.html
@@ -1,6 +1,28 @@
-<div [ngSwitch]="item.rmType">
-  <div *ngSwitchCase="'DV_DATE_TIME'">{{item.label}}: {{item.displayValue | date: 'dd.MM.yyyy HH:mm'}}</div>
-  <div *ngSwitchDefault>{{item.label}}: {{item.displayValue}}</div>
-</div>
+<!--<div [ngSwitch]="item.rmType">-->
+<!--<ul>-->
+<!--<div *ngSwitchCase="'DV_DATE_TIME'">{{item.label}}: {{item.displayValue | date: 'dd-MM-yyyy HH:mm'}}</div>-->
+<!--</ul>-->
+<!--<div *ngSwitchDefault>-->
+<!--<div [ngSwitch]="item.displayValue">-->
+<!--<div *ngSwitchCase="">{{item.label}}</div>-->
+<!--<ul>-->
+<!--<div *ngSwitchDefault>{{item.label}}: {{item.displayValue}}</div>-->
+<!--</ul>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
 <!--{{item.rmType}}-->
+
+
+<div [ngSwitch]="item.displayValue">
+  <div *ngSwitchCase="">{{item.label}}</div>
+  <div *ngSwitchDefault>
+    <div [ngSwitch]="item.rmType">
+      <ul>
+        <div *ngSwitchCase="'DV_DATE_TIME'">{{item.label}}: {{item.displayValue | date: 'dd-MM-yyyy HH:mm'}}</div>
+        <div *ngSwitchDefault>{{item.label}}: {{item.displayValue}}</div>
+      </ul>
+    </div>
+  </div>
+</div>
