--- a/src/app/components/patient-status/patient-status.component.css
+++ b/src/app/components/patient-status/patient-status.component.css
@@ -30,3 +30,14 @@ span{
   color: #DA4453;
 }
 
+.slika {
+  position: relative;
+}
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 18px;
+}
