--- a/src/app/components/patient-status/patient-status.component.html
+++ b/src/app/components/patient-status/patient-status.component.html
@@ -80,13 +80,17 @@
       </div>
     </div>
 
-    <div class="col-md-4" align="center">
-      <div *ngFor="let item of patientService.height, let i = index ">
-        <p *ngIf="i < 1">
-          <img src="https://dev.ehrscape.com/demo/img/body-blank-female.png" alt="HTML5 Icon">
-          Height <span>{{item.height}}{{item.unit}}</span>
-        </p>
+    <div class="col-md-4">
+      <div class="slika">
+        <img src="https://dev.ehrscape.com/demo/img/body-blank-female.png" alt="HTML5 Icon">
+
+        <div *ngFor="let item of patientService.height, let i = index " align="center">
+          <p *ngIf="i < 1" class="center">
+            Height <span>{{item.height}}{{item.unit}}</span>
+          </p>
+        </div>
       </div>
+
     </div>
   </div>
 
