--- a/src/app/components/patient-timeline/patient-timeline.component.html
+++ b/src/app/components/patient-timeline/patient-timeline.component.html
@@ -6,35 +6,35 @@
   <div class="panel-body; scroll">
     <div *ngFor="let item of patientService.presentation, let i = index ">
 
-      <div class="col-md-3" style="text-align: right">
-        {{item.metadata.startTime | date: "dd-MM-yyyy HH:mm"}}<br>
-        {{item.metadata.startTime | date: "dd-MMM"}}
-      </div>
+      <div [ngSwitch]="item.metadata.templateId">
 
-      <div class="col-md-1">
-        <div class="timeline-icon fa-stethoscope"></div>
-        <!--<div class="timeline-icon fa-plus-square"></div>-->
-        <!--<div class="timeline-icon fa-medkit"></div>-->
-      </div>
+        <div *ngSwitchCase="'Allergies'"></div>
 
-      <div class="col-md-8">
-        <div class="list-group">
-          <div class="list-group">
-            <details>
-              <summary>{{item.metadata.templateId}}{{' | ' + item.metadata.composer.name}}</summary>
-              <!--1-->
-              <!--<app-patient-composition-item [items]="item.composition.children"></app-patient-composition-item>-->
-              <!--<div *ngFor="let item of item.composition.children, let i = index " class="goce">-->
-                <!--<ul>-->
-                  <!--<li>{{item.label}}</li>&lt;!&ndash;2&ndash;&gt;-->
-                  <app-patient-composition-item [items]="item.composition.children"></app-patient-composition-item>
-                <!--</ul>-->
-              <!--</div>-->
-
-            </details>
-
+        <div *ngSwitchDefault>
+          <div class="col-md-3" style="text-align: right">
+            {{item.metadata.startTime | date: "dd-MM-yyyy HH:mm"}}<br>
+            {{item.metadata.startTime | date: "dd-MMM"}}
           </div>
-          <ul class="timeline"></ul>
+
+          <div class="col-md-1">
+            <div class="timeline-icon fa-stethoscope"></div>
+            <!--<div class="timeline-icon fa-plus-square"></div>-->
+            <!--<div class="timeline-icon fa-medkit"></div>-->
+          </div>
+
+          <div class="col-md-8">
+            <div class="list-group">
+
+              <details>
+                <summary>
+                  <div>{{item.metadata.templateId}}{{' | ' + item.metadata.composer.name}}</div>
+                </summary>
+                <app-patient-composition-item [items]="item.composition.children"></app-patient-composition-item>
+
+              </details>
+            </div>
+            <ul class="timeline"></ul>
+          </div>
         </div>
       </div>
 
@@ -49,46 +49,46 @@
       <!--</div>-->
 
       <!--<div class="col-md-8">-->
-        <!--<div class="list-group">-->
-          <!--<input type="checkbox" checked>-->
-            <!--{{item.metadata.templateId}}{{' | ' + item.metadata.composer.name}}-->
+      <!--<div class="list-group">-->
+      <!--<input type="checkbox" checked>-->
+      <!--{{item.metadata.templateId}}{{' | ' + item.metadata.composer.name}}-->
 
-          <!--&lt;!&ndash;1&ndash;&gt;-->
-            <!--<div id="i" class="hide">-->
-              <!--<div *ngFor="let item of item.composition.children, let i = index ">-->
-                <!--<ul>-->
-                  <!--<li>{{item.label}}</li>-->
-                  <!--&lt;!&ndash;2&ndash;&gt;-->
-                  <!--<div *ngFor="let item of item.children">-->
-                    <!--<ul>-->
-                      <!--<li>{{item.label}}: {{item.displayValue}}</li>-->
-                      <!--&lt;!&ndash;3&ndash;&gt;-->
-                      <!--<div *ngFor="let item of item.children">-->
-                        <!--<ul>-->
-                          <!--<li>{{item.label}}: {{item.displayValue}}</li>-->
-                          <!--&lt;!&ndash;4&ndash;&gt;-->
-                          <!--<div *ngFor="let item of item.children">-->
-                            <!--<ul>-->
-                              <!--<li>{{item.label}}: {{item.displayValue}}</li>-->
-                              <!--&lt;!&ndash;5&ndash;&gt;-->
-                              <!--<div *ngFor="let item of item.children">-->
-                                <!--<ul>-->
-                                  <!--<li>{{item.label}}: {{item.displayValue}}</li>-->
+      <!--&lt;!&ndash;1&ndash;&gt;-->
+      <!--<div id="i" class="hide">-->
+      <!--<div *ngFor="let item of item.composition.children, let i = index ">-->
+      <!--<ul>-->
+      <!--<li>{{item.label}}</li>-->
+      <!--&lt;!&ndash;2&ndash;&gt;-->
+      <!--<div *ngFor="let item of item.children">-->
+      <!--<ul>-->
+      <!--<li>{{item.label}}: {{item.displayValue}}</li>-->
+      <!--&lt;!&ndash;3&ndash;&gt;-->
+      <!--<div *ngFor="let item of item.children">-->
+      <!--<ul>-->
+      <!--<li>{{item.label}}: {{item.displayValue}}</li>-->
+      <!--&lt;!&ndash;4&ndash;&gt;-->
+      <!--<div *ngFor="let item of item.children">-->
+      <!--<ul>-->
+      <!--<li>{{item.label}}: {{item.displayValue}}</li>-->
+      <!--&lt;!&ndash;5&ndash;&gt;-->
+      <!--<div *ngFor="let item of item.children">-->
+      <!--<ul>-->
+      <!--<li>{{item.label}}: {{item.displayValue}}</li>-->
 
-                                <!--</ul>-->
-                              <!--</div>-->
-                            <!--</ul>-->
-                          <!--</div>-->
-                        <!--</ul>-->
-                      <!--</div>-->
-                    <!--</ul>-->
-                  <!--</div>-->
-                <!--</ul>-->
-              <!--</div>-->
-            <!--</div>-->
+      <!--</ul>-->
+      <!--</div>-->
+      <!--</ul>-->
+      <!--</div>-->
+      <!--</ul>-->
+      <!--</div>-->
+      <!--</ul>-->
+      <!--</div>-->
+      <!--</ul>-->
+      <!--</div>-->
+      <!--</div>-->
 
-          <!--<ul class="timeline"></ul>-->
-        <!--</div>-->
+      <!--<ul class="timeline"></ul>-->
+      <!--</div>-->
       <!--</div>-->
 
 
