--- a/src/app/components/patient-info/patient-info.component.css
+++ b/src/app/components/patient-info/patient-info.component.css
@@ -9,11 +9,30 @@ span{
   color: #434a54
 }
 
-.img{
-  class:'img-circle';
-  style:"border: 3px solid #ececec"
+
+.mask {
+  width: 1px;
+  height: 175px;
+  content:'';
+  display:block;
+  border-radius:12px / 125px;
+  box-shadow:0 0 8px #656D78;
 }
-img:hover{
-  class:"img-circle";
-  style:"border: 3px solid #ececec"
+
+
+.box {
+  border-style: solid;
+  border-width: 1px;
+  display: block;
+  width: 100px;
+  height: 100px;
+  background-color: #0000FF;
+  -webkit-transition: width 2s, height 2s, background-color 2s, -webkit-transform 2s;
+  transition: width 10s, height 2s, background-color 2s, transform 2s;
+}
+
+.box:hover {
+  background-color: #FFCCCC;
+  width: 100px;
+  height: 100px;
 }
