--- a/src/app/components/patient-status/patient-status.component.html
+++ b/src/app/components/patient-status/patient-status.component.html
@@ -80,13 +80,13 @@
       </div>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-3">
       <div class="slika">
-        <img src="https://dev.ehrscape.com/demo/img/body-blank-female.png" alt="HTML5 Icon">
+        <img src="https://dev.ehrscape.com/demo/img/body-blank-female.png" alt="HTML5 Icon" align="center">
 
         <div *ngFor="let item of patientService.height, let i = index " align="center">
           <p *ngIf="i < 1" class="center">
-            Height <span>{{item.height}}{{item.unit}}</span>
+            Height:<br><span>{{item.height}}{{item.unit}}</span>
           </p>
         </div>
       </div>
