--- a/src/app/components/patient-timeline/patient-timeline.component.html
+++ b/src/app/components/patient-timeline/patient-timeline.component.html
@@ -221,10 +221,10 @@
 </div>
 
 <!--Pulse-->
-<div class="grafikon" class="col-md-6">
+<div class="grafikon" class="col-md-6" *ngIf="'Pulse' != test">
   <div class="panel panel-success">
     <div class="panel-heading">
-      <span style="float:right" class="glyphicon glyphicon-remove"></span>
+      <span style="float:right" class="glyphicon glyphicon-remove" (click)="hideContent('Pulse')"></span>
       <h3 class="panel-title">Pulse</h3>
     </div>
     <div class="panel-body">
@@ -248,10 +248,10 @@
 </div>
 
 <!--Weight-->
-<div class="grafikon" class="col-md-6" *ngIf="hideContent">
+<div class="grafikon" class="col-md-6" *ngIf="'Weight' != test" >
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <span style="float:right" (click)="hideContent = false" class="glyphicon glyphicon-remove"></span>
+      <span style="float:right" class="glyphicon glyphicon-remove"  (click)="hideContent('Weight')"></span>
       <h3 class="panel-title">Weight</h3>
     </div>
     <div class="panel-body">
