--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,24 @@
-<div class="container">
-  <div class="col-md-9 pull-left">
-    <div class="col-md-12 pull-left">
-      <app-patient-info></app-patient-info>
-    </div>
+<div class="with-dark-background">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
+        <div class="col-md-12">
+          <app-patient-info></app-patient-info>
+        </div>
 
-    <div class="col-md-12 pull-left">
-      <app-patient-status></app-patient-status>
-    </div>
+        <div class="col-md-12">
+          <app-patient-status></app-patient-status>
+        </div>
 
-    <div class="col-md-12 pull-left">
-      <app-patient-timeline></app-patient-timeline>
-    </div>
-  </div>
+        <div class="col-md-12">
+          <app-patient-timeline></app-patient-timeline>
+        </div>
+      </div>
 
-  <div class="col-md-3 pull-left">
-    <app-patient-history></app-patient-history>
+      <div class="col-md-3">
+        <app-patient-history></app-patient-history>
+      </div>
+    </div>
   </div>
 </div>
+
