--- a/src/app/components/patient-history/patient-history.component.css
+++ b/src/app/components/patient-history/patient-history.component.css
@@ -1,3 +1,12 @@
 li{
   font-size: 13px;
 }
+h3{
+  font-family: 'Open Sans';
+  font-weight: 300;
+  font-size: 22px;
+  line-height: 30px;
+  color: #5d5d5d;
+}
+
+
