--- a/src/app/components/patient-status/patient-status.component.css
+++ b/src/app/components/patient-status/patient-status.component.css
@@ -10,8 +10,7 @@ body {
 p{
   font-family: sans-serif;
   font-size: 16px;
-  line-height: 1.72222;
-  margin: 0 0 15px;
+  margin: 0;
   color: #999;
 
 }
@@ -41,5 +40,18 @@ span{
   left: 80px;
   transform: translate(-50%, -50%);
   font-size: 18px;
+}
 
+.bordered-right {
+  border-right: 1px solid #eee;
+}
+
+.bordered {
+  border-top: 1px solid #eee;
+  padding: 15px;
+}
+
+.margins{
+  margin-left: -25px;
+  margin-right: -25px;
 }
