--- a/src/app/components/patient-info/patient-info.component.html
+++ b/src/app/components/patient-info/patient-info.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    <div class="row">
+    <div class="row; center">
 
       <div class="col-md-3" align="center">
         <img (mouseover)="onMouseOver()" (mouseout)="onMouseOut()" src="https://dev.ehrscape.com/demo/img/female.png"
@@ -15,7 +15,7 @@
       </div>
 
 
-      <div class="col-md-3" align="center">
+      <div class="col-md-3">
         <p>Healthcare team:</p>
         <img src="https://dev.ehrscape.com/demo/img/doctor2.png" alt="nemat slika" class="img-circle">
       </div>
