--- a/src/app/components/patient-timeline/patient-timeline.component.css
+++ b/src/app/components/patient-timeline/patient-timeline.component.css
@@ -142,15 +142,6 @@ span{
   left: -6.5%;
 }
 
-
-/*.timeline > li .timeline-date {*/
-  /*display: block;*/
-  /*width: 30%;*/
-  /*padding-right: 100px;*/
-  /*position: absolute;*/
-/*}*/
-
-
 /*Timeline otvoranjeto*/
 summary {cursor: pointer; padding: 15px 0; width: 100%; background-color: #dcdfe3; border-radius: 2px}
 summary:hover, details[open] summary {background: #3498DB; color: #fff;}
@@ -160,12 +151,27 @@ details[open] {box-shadow: 0 1px 1px rgba(0, 0, 0, .4)}
 /* Applies a grabbing hand on top of the div that's draggable*/
 .cursor-draggable {
   cursor: grab;
-  cursor: -moz-grab;
-  cursor: -webkit-grab;
+  /*cursor: -moz-grab;*/
+  /*cursor: -webkit-grab;*/
 }
 /*  Apply a "closed-hand" cursor during drag operation. */
 .cursor-draggable:active {
   cursor: grabbing;
-  cursor: -moz-grabbing;
-  cursor: -webkit-grabbing;
+  /*cursor: -moz-grabbing;*/
+  /*cursor: -webkit-grabbing;*/
+}
+
+@media only screen and (max-width: 1199px) {
+  .timeline:before {
+    left: -5%;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+.tekst{
+  text-align: left;
+}
+  .slika{
+    text-align: right;
+  }
 }
